--- a/src/_templates/index/i-3.pug
+++ b/src/_templates/index/i-3.pug
@@ -22,8 +22,8 @@ section.index-3(data-bg="../assets/images/background/index-3.png")
 				<g transform="matrix(0.998, -0.07, 0.07, 0.998, 784.302, 2445.021)">
 					<g transform="translate(53.663 0)"><rect width="904.742" height="678.337" transform="translate(0 48.707)" fill="url(#d)"/><rect width="7.2" height="51.201" transform="translate(413.156 725.386) rotate(-27)" fill="url(#e)"/><rect width="7.2" height="51.201" transform="matrix(0.5, -0.866, 0.866, 0.5, 852.821, 486.477)" fill="url(#e)"/><rect width="7.2" height="51.201" transform="matrix(0.017, -1, 1, 0.017, 899.933, 340.91)" fill="url(#e)"/><rect width="7.2" height="51.201" transform="translate(679.324 51.13) rotate(177)" fill="url(#e)"/><rect width="6.4" height="51.201" transform="translate(295.263 53.607) rotate(-165)" fill="url(#i)"/><rect width="5.6" height="51.201" transform="translate(448.51 53.94) rotate(-143)" fill="url(#i)"/><rect width="5.6" height="28" transform="translate(516.282 51.221) rotate(140)" fill="url(#i)"/><rect width="6.4" height="37.6" transform="translate(424.11 736.166) rotate(-141)" fill="#fbdd0f"/><rect width="16" height="77.601" transform="translate(186.598 715.37) rotate(18)" fill="url(#l)"/></g><rect width="16.189" height="105.228" transform="matrix(-0.829, 0.559, -0.559, -0.829, 72.264, 505.675)" fill="url(#m)"/></g><circle cx="327.115" cy="327.115" r="327.115" transform="matrix(0.848, -0.53, 0.53, 0.848, 724.837, 2702.031)" opacity="0.04" fill="url(#a)"/></g></svg>
 	.block-2
-		.container
-			.block-content.mx-at(max-width="1280px")
+		.container(max-width="1036px")
+			.block-content.mx-at
 				h3.ta-c HỘI TỤ NỘI LỰC SINH LỜI NHANH
 				.list-content
 					ul
