--- a/src/_templates/index/i-6.pug
+++ b/src/_templates/index/i-6.pug
@@ -7,7 +7,7 @@ section.index-6(data-bg="../assets/images/background/index-6.png")
 						h2 CHƯƠNG TRÌNH BÁN HÀNG
 	.block-2(full-screen data-bg="../assets/images/background/index-6-block-2.png")
 		.container.h-100
-			.block-content.h-100.mx-at(max-width='1088px' bg-style="1")
+			.block-content.h-100.mx-at(max-width='1088px' data-bg="../assets/images/background/item-index-6.png")
 				.content.ta-c
 					.price
 						h4 giá công khai chỉ từ
