--- a/src/_templates/index/i-7.pug
+++ b/src/_templates/index/i-7.pug
@@ -1,6 +1,6 @@
 section.index-7(data-bg="../assets/images/background/index-7.png")
-	.container
-		.block-content.mx-at(max-width="80%")
+	.container(max-width="1360px")
+		.block-content.mx-at
 			h2 GIẢI THƯỞNG ĐẶC BIỆT
 			.prize
 				ul
