--- a/src/_templates/index/i-9.pug
+++ b/src/_templates/index/i-9.pug
@@ -58,6 +58,6 @@ section.index-9
 								.text(data-bg="../assets/images/background/item_index-9.png")
 									h3.lcl.lcl-1 Lorem ipsum dolor
 									p.lcl.lcl-2 Lorem ipsum dolor sit amet, consectetuer adipiscing eli.
-				.list-btn
+				.list-btn-slider
 					.item.swiper-button-prev
 					.item.swiper-button-next
