--- a/src/scss/pages/index/i-6.scss
+++ b/src/scss/pages/index/i-6.scss
@@ -17,54 +17,34 @@
 		.block-content {
 			position: relative;
 
-			.content {
-				position: absolute;
-				top: 50%;
-				left: 50%;
-				transform: translate(-50%, -50%);
-				z-index: 1;
-				width: 80%;
-			}
-
-			&[bg-style="1"] {
-
-				&::after,
-				&::before {
-					content: '';
+			@media (min-width: 1025px) {
+				.content {
 					position: absolute;
-					left: 0;
-					width: 100%;
-					height: 70%;
-				}
-
-				&::after {
-					top: 0;
-					background: linear-gradient(180deg, #054B37, #22643900);
-				}
-
-				&::before {
-					bottom: 0;
-					background: linear-gradient(180deg, #22643900, #054B37);
+					top: 50%;
+					left: 50%;
+					transform: translate(-50%, -50%);
+					z-index: 1;
+					width: 80%;
 				}
 			}
 		}
 
 		.price {
 			h4 {
-				font-size: 1.5625rem;
+				font-size: 25px;
 				color: #ffffff;
 				text-transform: uppercase;
 			}
 
 			h3 {
-				font-size: 3.125rem;
+				font-size: 50px;
 				color: map-get($mau, main-1);
 				text-shadow: 0 3px 6px rgba($color: #000000, $alpha: .78);
 			}
 
 			p {
 				color: #ffffff;
-				font-size: 1.25rem;
+				font-size: 20px;
 			}
 		}
 
@@ -72,7 +52,7 @@
 			margin-top: 25px;
 
 			h3 {
-				font-size: 1.5625rem;
+				font-size: 25px;
 				color: #ffffff;
 				text-transform: uppercase;
 			}
@@ -97,7 +77,7 @@
 
 					.text {
 						p {
-							font-size: 1.25rem;
+							font-size: 20px;
 							color: #ffffff;
 						}
 					}
@@ -113,7 +93,7 @@
 			margin-top: 60px;
 
 			h3 {
-				font-size: 1.5625rem;
+				font-size: 25px;
 				color: #ffffff;
 				text-transform: uppercase;
 			}
@@ -138,7 +118,7 @@
 
 					.text {
 						p {
-							font-size: 1.25rem;
+							font-size: 20px;
 							color: #ffffff;
 						}
 					}
@@ -146,6 +126,199 @@
 
 				li+li {
 					padding-left: 15px;
+				}
+			}
+		}
+	}
+
+	@media (max-width: 1024.98px) {
+		.block-1 {
+			.block-content {
+				padding: 50px 0;
+			}
+		}
+
+		.block-2 {
+			background-size: cover;
+			height: auto;
+
+			.block-content {
+				padding: 50px 25px;
+				max-width: 80%;
+			}
+		}
+	}
+
+	@media (max-width: 767.98px) {
+		.block-1 {
+			.block-content {
+				max-width: 80%;
+			}
+		}
+
+		.block-2 {
+			.price {
+				h4 {
+					font-size: 22px;
+				}
+
+				h3 {
+					font-size: 32px;
+				}
+
+				p {
+					font-size: 18px;
+				}
+			}
+
+			.prioritize {
+				h3 {
+					font-size: 22px;
+				}
+
+				ul {
+					li {
+						.icon {
+							height: 60px;
+							width: 30%;
+							margin: 0 auto 10px;
+						}
+
+						.text {
+							p {
+								font-size: 16px;
+							}
+						}
+					}
+
+					li+li {
+						padding-left: 15px;
+					}
+				}
+			}
+
+			.sale {
+				margin-top: 25px;
+
+				h3 {
+					font-size: 22px;
+				}
+
+				ul {
+					margin-top: 20px;
+
+					li {
+						.icon {
+							height: 60px;
+							width: 30%;
+							margin: 0 auto 10px;
+						}
+
+						.text {
+							p {
+								font-size: 16px;
+							}
+						}
+					}
+
+					li+li {
+						padding-left: 15px;
+					}
+				}
+			}
+		}
+	}
+
+	@media (max-width: 575.98px) {
+		.block-1 {
+			.block-content {
+				padding: 25px 0;
+
+				.block-title {
+					h2 {
+						font-size: 18px;
+					}
+				}
+			}
+		}
+
+		.block-2 {
+			.container {
+				padding: 0;
+			}
+
+			.block-content {
+				max-width: 100%;
+				padding: 25px;
+			}
+
+			.price {
+				h4 {
+					font-size: 18px;
+				}
+
+				h3 {
+					font-size: 24px;
+				}
+
+				p {
+					font-size: 14px;
+				}
+			}
+
+			.prioritize {
+				margin-top: 25px;
+				max-width: 100%;
+
+				h3 {
+					font-size: 18px;
+				}
+
+				ul {
+					margin-top: 25px;
+
+					li {
+						.text {
+							p {
+								font-size: 14px;
+							}
+						}
+					}
+
+					li+li {
+						padding-left: 15px;
+					}
+				}
+			}
+
+			.sale {
+				margin-top: 25px;
+
+				h3 {
+					font-size: 18px;
+					color: #ffffff;
+					text-transform: uppercase;
+				}
+
+				ul {
+					margin-top: 25px;
+
+					li {
+						.icon {
+							width: 50%;
+							height: 50px;
+						}
+
+						.text {
+							p {
+								font-size: 14px;
+							}
+						}
+					}
+
+					li+li {
+						padding-left: 15px;
+					}
 				}
 			}
 		}
