--- a/src/scss/pages/index/i-7.scss
+++ b/src/scss/pages/index/i-7.scss
@@ -3,6 +3,10 @@
 	align-items: center;
 	min-height: 482px;
 
+	.conatiner {
+		padding: 0;
+	}
+
 	h2 {
 		text-align: center;
 		color: #ffffff;
@@ -20,21 +24,77 @@
 			padding-left: 0;
 		}
 
-		.img {
-			height: 158px;
-			overflow: hidden;
-		}
-
 		.text {
 			margin-top: 40px;
 
 			p {
 				color: #ffffff;
-				font-size: 1.125rem;
+				font-size: 18px;
 			}
 
 			span {
-				font-size: 1.5625rem;
+				font-size: 20px;
+			}
+		}
+	}
+
+	@media (max-width: 1024.98px) {
+		min-height: unset;
+		padding: 50px 0;
+		background-size: cover;
+
+		.prize {
+			margin-top: 25px;
+
+			ul {
+				display: flex;
+				flex-wrap: wrap;
+				margin-right: -10px;
+				margin-left: -10px;
+				justify-content: unset;
+			}
+
+			li {
+				-ms-flex: 0 0 100%;
+				-webkit-box-flex: 0;
+				flex: 0 0 33.3333%;
+				max-width: 33.3333%;
+				padding-right: 10px;
+				padding-left: 10px;
+			}
+
+			.text {
+				margin-top: 25px;
+
+				p {
+					color: #ffffff;
+					font-size: 16px;
+				}
+
+				span {
+					font-size: 18px;
+				}
+			}
+		}
+	}
+
+	@media (max-width: 575.98px) {
+		padding: 25px 0;
+
+		h2 {
+			font-size: 18px;
+		}
+
+		.prize {
+
+			.text {
+				p {
+					font-size: 14px;
+				}
+
+				span {
+					font-size: 16px;
+				}
 			}
 		}
 	}
