--- a/src/_templates/index/i-4.pug
+++ b/src/_templates/index/i-4.pug
@@ -1,7 +1,7 @@
 section.index-4
 	.map-index-4-slider-wrapper
 		.map-index-4-slider-custom
-			.map-index-4-slider-1.map-index-4-slider
+			.map-index-4-slider-1.map-index-4-slider#map-index-4-slider-1
 				.content
 					.number 01
 					.title Sân golf chuẩn quốc tế 27 lỗ
@@ -18,7 +18,7 @@ section.index-4
 							img(src="./assets/images/background/index-4-1.jpg", alt="")
 						.swiper-slide
 							img(src="./assets/images/background/index-4-1.jpg", alt="")
-			.map-index-4-slider-2.map-index-4-slider
+			.map-index-4-slider-2.map-index-4-slider#map-index-4-slider-2
 				.content
 					.number 02
 					.title Sân golf chuẩn quốc tế 27 lỗ
@@ -35,7 +35,7 @@ section.index-4
 							img(src="./assets/images/background/index-4-1.jpg", alt="")
 						.swiper-slide
 							img(src="./assets/images/background/index-4-1.jpg", alt="")
-			.map-index-4-slider-3.map-index-4-slider
+			.map-index-4-slider-3.map-index-4-slider#map-index-4-slider-3
 				.content
 					.number 03
 					.title Sân golf chuẩn quốc tế 27 lỗ
@@ -52,7 +52,7 @@ section.index-4
 							img(src="./assets/images/background/index-4-1.jpg", alt="")
 						.swiper-slide
 							img(src="./assets/images/background/index-4-1.jpg", alt="")
-			.map-index-4-slider-4.map-index-4-slider
+			.map-index-4-slider-4.map-index-4-slider#map-index-4-slider-4
 				.content
 					.number 04
 					.title Sân golf chuẩn quốc tế 27 lỗ
@@ -69,7 +69,7 @@ section.index-4
 							img(src="./assets/images/background/index-4-1.jpg", alt="")
 						.swiper-slide
 							img(src="./assets/images/background/index-4-1.jpg", alt="")
-			.map-index-4-slider-5.map-index-4-slider
+			.map-index-4-slider-5.map-index-4-slider#map-index-4-slider-5
 				.content
 					.number 05
 					.title Sân golf chuẩn quốc tế 27 lỗ
@@ -86,7 +86,7 @@ section.index-4
 							img(src="./assets/images/background/index-4-1.jpg", alt="")
 						.swiper-slide
 							img(src="./assets/images/background/index-4-1.jpg", alt="")
-			.map-index-4-slider-6.map-index-4-slider
+			.map-index-4-slider-6.map-index-4-slider#map-index-4-slider-6
 				.content
 					.number 06
 					.title Sân golf chuẩn quốc tế 27 lỗ
@@ -103,7 +103,7 @@ section.index-4
 							img(src="./assets/images/background/index-4-1.jpg", alt="")
 						.swiper-slide
 							img(src="./assets/images/background/index-4-1.jpg", alt="")
-			.map-index-4-slider-7.map-index-4-slider
+			.map-index-4-slider-7.map-index-4-slider#map-index-4-slider-7
 				.content
 					.number 07
 					.title Sân golf chuẩn quốc tế 27 lỗ
@@ -141,29 +141,29 @@ section.index-4
 				<area shape="circle" coords="1642,247,40" href="#" area-target="7" />
 			</map>
 			.map-dialog
-				.dialog.dialog-1
+				.dialog.dialog-1(data-dialog="1")
 					.dialog-wrapper
 						h2 Sân golf chuẩn quốc tế 1
-				.dialog.dialog-2
+				.dialog.dialog-2(data-dialog="2")
 					.dialog-wrapper
 						h2 Sân golf chuẩn quốc tế 2
-				.dialog.dialog-3
+				.dialog.dialog-3(data-dialog="3")
 					.dialog-wrapper
 						h2 Sân golf chuẩn quốc tế 3
-				.dialog.dialog-4
+				.dialog.dialog-4(data-dialog="4")
 					.dialog-wrapper
 						h2 Sân golf chuẩn quốc tế 4
-				.dialog.dialog-5
+				.dialog.dialog-5(data-dialog="5")
 					.dialog-wrapper
 						h2 Sân golf chuẩn quốc tế 5
-				.dialog.dialog-6
+				.dialog.dialog-6(data-dialog="6")
 					.dialog-wrapper
 						h2 Sân golf chuẩn quốc tế 6
-				.dialog.dialog-7
+				.dialog.dialog-7(data-dialog="7")
 					.dialog-wrapper
 						h2 Sân golf chuẩn quốc tế 7
 		.container.map-index-4-container
-			.block-content(max-width='40%')
+			.block-content
 				.content
 					h2 TIỆN ÍCH ĐẲNG CẤP 5 SAO
 						br
