--- a/src/scss/pages/index/i-4.scss
+++ b/src/scss/pages/index/i-4.scss
@@ -3,50 +3,78 @@
 	box-shadow: 5px 5px 10px rgba($color: #000000, $alpha: 0.5);
 
 	.container {
-		position: absolute;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		left: 50%;
-		transform: translateX(-50%);
+		@media (min-width: 1025px) {
+			position: absolute;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			left: 50%;
+			transform: translateX(-50%);
+		}
 	}
 	.map-index-4-container {
-		pointer-events: none;
-		transition: all 0.5s linear;
+		@media (min-width: 1025px) {
+			pointer-events: none;
+			transition: all 0.5s linear;
+		}
 	}
 
 	.block-content {
-		position: absolute;
-		bottom: 20%;
-		left: 10px;
-
-		h2 {
-			color: map-get($mau, main-1);
-			margin-bottom: 30px;
-			font-size: 1.5rem;
-			@media (min-width: 1200px) {
-				font-size: 2rem;
+		padding: 15px 0;
+		.content {
+			h2 {
+				color: map-get($mau, main-1);
+				margin-bottom: 10px;
+				font-size: 1.5rem;
+				@media (min-width: 768px) {
+					margin-bottom: 15px;
+				}
+				@media (min-width: 1025px) {
+					margin-bottom: 20px;
+				}
+				@media (min-width: 1200px) {
+					font-size: 2rem;
+					margin-bottom: 30px;
+				}
+				@media (min-width: 1440px) {
+					font-size: 2.5rem;
+				}
 			}
-			@media (min-width: 1440px) {
-				font-size: 2.5rem;
-			}
-		}
 
-		.desc {
-			ul {
-				li {
-					color: #ffffff;
-					font-size: 1rem;
-					@media (min-width: 1200px) {
-						font-size: 1.1rem;
+			.desc {
+				ul {
+					padding-left: 20px;
+					li {
+						color: #111111;
+						font-size: 0.85rem;
+						@media (min-width: 1200px) {
+							font-size: 1.1rem;
+						}
+						@media (min-width: 1440px) {
+							font-size: 1.25rem;
+						}
 					}
-					@media (min-width: 1440px) {
-						font-size: 1.25rem;
+
+					li + li {
+						margin-top: 20px;
 					}
 				}
-
-				li + li {
-					margin-top: 20px;
+			}
+		}
+		@media (min-width: 1025px) {
+			padding: 0;
+			max-width: 40%;
+			position: absolute;
+			top: 50%;
+			left: 10px;
+			transform: translateY(-50%);
+			.content {
+				.desc {
+					ul {
+						li {
+							color: #ffffff;
+						}
+					}
 				}
 			}
 		}
@@ -55,12 +83,44 @@
 		position: relative;
 	}
 	.map-dialog {
-		position: absolute;
-		pointer-events: none;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
+		@media (min-width: 1025px) {
+			position: absolute;
+			pointer-events: none;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+		}
+		@media (max-width: 1024.98px) {
+			display: flex;
+			flex-wrap: wrap;
+			margin: 0 -5px;
+			.dialog {
+				padding: 0 5px;
+				-ms-flex: 0 0 100%;
+				-webkit-box-flex: 0;
+				flex: 0 0 33.333%;
+				max-width: 33.333%;
+				display: block;
+				margin-top: 10px;
+				.dialog-wrapper {
+					width: 100%;
+					h2 {
+						white-space: normal;
+						font-size: 14px;
+					}
+					&:before {
+						content: none;
+					}
+				}
+			}
+		}
+		@media (max-width: 767.98px) {
+			.dialog {
+				flex: 0 0 50%;
+				max-width: 50%;
+			}
+		}
 	}
 	.map-index-4 {
 		transition: all 0.5s linear;
@@ -72,122 +132,125 @@
 		}
 	}
 	.map-index-4-slider-wrapper {
-		z-index: 2;
-		position: absolute;
-		top: 0;
-		left: 0;
-		height: 100%;
-		overflow: hidden;
-		transform: translateX(-100%);
-		transition: all 0.5s linear;
-		width: 100%;
 		.map-index-4-slider-custom {
 			background-color: white;
 			height: 100%;
 		}
 		.map-index-4-slider {
-			display: none;
-			height: 100%;
-			position: relative;
-			.content {
-				position: absolute;
-				z-index: 2;
-				bottom: 0;
-				left: 0;
-				width: 100%;
-				padding: 30px;
-				background-image: url('../assets/images/background/bg-1.png');
-				background-size: 100% 100%;
-				background-repeat: no-repeat;
-				display: flex;
-				align-items: center;
-				.number {
-					flex: 0 0 55px;
-					max-width: 55px;
-					height: 55px;
-					display: flex;
-					justify-content: center;
-					align-items: center;
-					background-image: url('../assets/bg-num.png');
-					background-size: 100%;
-					font-size: 22px;
-					color: white;
-					@media (min-width: 1200px) {
-						font-size: 26px;
-						flex: 0 0 65px;
-						max-width: 65px;
-						height: 65px;
-					}
-					@media (min-width: 1440px) {
-						font-size: 30px;
-						flex: 0 0 75px;
-						max-width: 75px;
-						height: 75px;
-					}
-				}
-				.title,
-				.text {
-					-ms-flex-preferred-size: 0;
-					flex-basis: 0;
-					-ms-flex-positive: 1;
-					flex-grow: 1;
-					max-width: 100%;
-				}
-				.title {
-					font-size: 32px;
-					color: #dcc375;
-					text-transform: uppercase;
-					padding: 0 10px;
-					font-weight: 700;
-					@media (min-width: 1200px) {
-						font-size: 36px;
-					}
-					@media (min-width: 1440px) {
-						font-size: 40px;
-					}
-				}
-				.text {
-					font-size: 14px;
-					color: white;
-					padding-left: 15px;
-					position: relative;
-					@media (min-width: 1200px) {
-						font-size: 15px;
-						padding-left: 22px;
-					}
-					@media (min-width: 1440px) {
-						font-size: 16px;
-						padding-left: 30px;
-					}
-					&:before {
-						content: '';
-						position: absolute;
-						width: 1px;
-						height: 75px;
-						top: 50%;
-						transform: translateY(-50%);
-						left: 0;
-						background-color: #dcc375;
-					}
-				}
-			}
-			.swiper-container {
+			@media (min-width: 1025px) {
+				display: none;
 				height: 100%;
-			}
-			.swiper-slide {
-				img {
-					object-fit: cover;
+				position: relative;
+				.content {
+					position: absolute;
+					z-index: 2;
+					bottom: 0;
+					left: 0;
 					width: 100%;
+					padding: 30px;
+					background-image: url('../assets/images/background/bg-1.png');
+					background-size: 100% 100%;
+					background-repeat: no-repeat;
+					display: flex;
+					align-items: center;
+					.number {
+						flex: 0 0 55px;
+						max-width: 55px;
+						height: 55px;
+						display: flex;
+						justify-content: center;
+						align-items: center;
+						background-image: url('../assets/bg-num.png');
+						background-size: 100%;
+						font-size: 22px;
+						color: white;
+						@media (min-width: 1200px) {
+							font-size: 26px;
+							flex: 0 0 65px;
+							max-width: 65px;
+							height: 65px;
+						}
+						@media (min-width: 1440px) {
+							font-size: 30px;
+							flex: 0 0 75px;
+							max-width: 75px;
+							height: 75px;
+						}
+					}
+					.title,
+					.text {
+						-ms-flex-preferred-size: 0;
+						flex-basis: 0;
+						-ms-flex-positive: 1;
+						flex-grow: 1;
+						max-width: 100%;
+					}
+					.title {
+						font-size: 32px;
+						color: #dcc375;
+						text-transform: uppercase;
+						padding: 0 10px;
+						font-weight: 700;
+						@media (min-width: 1200px) {
+							font-size: 36px;
+						}
+						@media (min-width: 1440px) {
+							font-size: 40px;
+						}
+					}
+					.text {
+						font-size: 14px;
+						color: white;
+						padding-left: 15px;
+						position: relative;
+						@media (min-width: 1200px) {
+							font-size: 15px;
+							padding-left: 22px;
+						}
+						@media (min-width: 1440px) {
+							font-size: 16px;
+							padding-left: 30px;
+						}
+						&:before {
+							content: '';
+							position: absolute;
+							width: 1px;
+							height: 75px;
+							top: 50%;
+							transform: translateY(-50%);
+							left: 0;
+							background-color: #dcc375;
+						}
+					}
+				}
+				.swiper-container {
 					height: 100%;
 				}
+				.swiper-slide {
+					img {
+						object-fit: cover;
+						width: 100%;
+						height: 100%;
+					}
+				}
+				&.active {
+					display: block;
+				}
 			}
-			&.active {
-				display: block;
+			@media (max-width: 1024.98px) {
 			}
 		}
-
 		@media (min-width: 1025px) {
+			position: absolute;
+			top: 0;
+			left: 0;
+			height: 100%;
 			padding-right: 250px;
+			z-index: 2;
+			overflow: hidden;
+			transform: translateX(-100%);
+			transition: all 0.5s linear;
+			width: 100%;
 		}
 		@media (min-width: 1200px) {
 			padding-right: 350px;
@@ -197,6 +260,9 @@
 		}
 		@media (min-width: 1600px) {
 			padding-right: 535px;
+		}
+		@media (max-width: 1024.98px) {
+			display: none;
 		}
 		&.pull-right {
 			transform: translateX(0);
