done respone section

--- a/src/_templates/index/i-11.pug
+++ b/src/_templates/index/i-11.pug
@@ -18,9 +18,12 @@ section.index-11
 					.title ĐĂNG KÝ NHẬN TIN
 					.desc Vui lòng điền vào form dưới đây để nhận toàn bộ thông tin, các chính sách, tài liệu dự án hoặc để chúng tôi tư vấn cho bạn.
 				.block-form
-					.input-group
-						input(type="text" placeholder="Name")
-					.input-group
-						input(type="text" placeholder="Email")
-					.input-group
-						input(type="text" placeholder="Phone")
+					form(action="#")
+						.input-group
+							input(type="text" placeholder="Name")
+						.input-group
+							input(type="text" placeholder="Email")
+						.input-group
+							input(type="text" placeholder="Phone")
+						.submit
+							button gửi
