--- a/src/_templates/_layout/_header.pug
+++ b/src/_templates/_layout/_header.pug
@@ -19,6 +19,7 @@ header
 						a(href="#") tiến độ
 					li
 						a(href="#") thư viện
+			.toggle-menu-mobile
 			.language
 				ul
 					li.active
