--- a/src/_templates/index/i-2.pug
+++ b/src/_templates/index/i-2.pug
@@ -1,4 +1,4 @@
-section.index-2(full-screen)
+section.index-2(data-scroll-id="1" full-screen)
 	.slider-main-index__2.w-100.h-100
 		.swiper-container.w-100.h-100
 			.swiper-wrapper.w-100.h-100
