--- a/src/_templates/index/i-3.pug
+++ b/src/_templates/index/i-3.pug
@@ -1,4 +1,4 @@
-section.index-3(data-bg="../assets/images/background/index-3.png")
+section.index-3(data-scroll-id="2" data-bg="../assets/images/background/index-3.png")
 	.block-1
 		.container.h-100
 			.block-content(max-width='40%')
