--- a/src/_templates/index/i-6.pug
+++ b/src/_templates/index/i-6.pug
@@ -1,4 +1,4 @@
-section.index-6(data-bg="../assets/images/background/index-6.png")
+section.index-6(data-scroll-id="4" data-bg="../assets/images/background/index-6.png")
 	.block-1
 		.container
 			.block-content.ta-c.mx-at(max-width='60%')
