--- a/src/_templates/index/i-8.pug
+++ b/src/_templates/index/i-8.pug
@@ -1,4 +1,4 @@
-section.index-8(data-bg="../assets/images/background/index-8.png")
+section.index-8(data-scroll-id="5" data-bg="../assets/images/background/index-8.png")
 	.container(max-width='1360px')
 		.block-content.mx-at
 			.content.ta-c
