--- a/src/scss/_globals/utilities.scss
+++ b/src/scss/_globals/utilities.scss
@@ -6,6 +6,28 @@ body {
 	}
 }
 
+#overlay {
+	cursor: pointer;
+	opacity: 0;
+	visibility: hidden;
+	pointer-events: none;
+
+	background-color: rgba(0, 0, 0, .8);
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 400;
+	transition: .3s all ease-in-out;
+
+	&.active {
+		opacity: 1;
+		visibility: visible;
+		pointer-events: visible;
+	}
+}
+
 input,
 select,
 textarea {
@@ -85,6 +107,10 @@ textarea {
 
 main {
 	padding-top: 100px;
+
+	@media (max-width: 575.98px) {
+		padding-top: 50px;
+	}
 }
 
 .field-validation-error {
