--- a/src/scss/pages/index/i-4.scss
+++ b/src/scss/pages/index/i-4.scss
@@ -22,21 +22,26 @@
 
 	.block-content {
 		padding: 15px 0;
+
 		.content {
 			h2 {
 				color: map-get($mau, main-1);
 				margin-bottom: 10px;
 				font-size: 1.5rem;
+
 				@media (min-width: 768px) {
 					margin-bottom: 15px;
 				}
+
 				@media (min-width: 1025px) {
 					margin-bottom: 20px;
 				}
+
 				@media (min-width: 1200px) {
 					font-size: 2rem;
 					margin-bottom: 30px;
 				}
+
 				@media (min-width: 1440px) {
 					font-size: 2.5rem;
 				}
@@ -45,23 +50,27 @@
 			.desc {
 				ul {
 					padding-left: 20px;
+
 					li {
 						color: #111111;
 						font-size: 0.85rem;
+
 						@media (min-width: 1200px) {
 							font-size: 1.1rem;
 						}
+
 						@media (min-width: 1440px) {
 							font-size: 1.25rem;
 						}
 					}
 
-					li + li {
+					li+li {
 						margin-top: 20px;
 					}
 				}
 			}
 		}
+
 		@media (min-width: 1025px) {
 			padding: 0;
 			max-width: 40%;
@@ -69,6 +78,7 @@
 			top: 50%;
 			left: 10px;
 			transform: translateY(-50%);
+
 			.content {
 				.desc {
 					ul {
@@ -94,10 +104,12 @@
 			width: 100%;
 			height: 100%;
 		}
+
 		@media (max-width: 1024.98px) {
 			display: flex;
 			flex-wrap: wrap;
 			margin: 0 -5px;
+
 			.dialog {
 				padding: 0 5px;
 				-ms-flex: 0 0 100%;
@@ -106,18 +118,22 @@
 				max-width: 33.333%;
 				display: block;
 				margin-top: 10px;
+
 				.dialog-wrapper {
 					width: 100%;
+
 					h2 {
 						white-space: normal;
 						font-size: 14px;
 					}
+
 					&:before {
 						content: none;
 					}
 				}
 			}
 		}
+
 		@media (max-width: 767.98px) {
 			.dialog {
 				flex: 0 0 50%;
@@ -149,6 +165,7 @@
 				display: none;
 				height: 100%;
 				position: relative;
+
 				.content {
 					position: absolute;
 					z-index: 2;
@@ -161,6 +178,7 @@
 					background-repeat: no-repeat;
 					display: flex;
 					align-items: center;
+
 					.number {
 						flex: 0 0 55px;
 						max-width: 55px;
@@ -172,12 +190,14 @@
 						background-size: 100%;
 						font-size: 22px;
 						color: white;
+
 						@media (min-width: 1200px) {
 							font-size: 26px;
 							flex: 0 0 65px;
 							max-width: 65px;
 							height: 65px;
 						}
+
 						@media (min-width: 1440px) {
 							font-size: 30px;
 							flex: 0 0 75px;
@@ -185,6 +205,7 @@
 							height: 75px;
 						}
 					}
+
 					.title,
 					.text {
 						-ms-flex-preferred-size: 0;
@@ -193,32 +214,39 @@
 						flex-grow: 1;
 						max-width: 100%;
 					}
+
 					.title {
 						font-size: 32px;
 						color: #dcc375;
 						text-transform: uppercase;
 						padding: 0 10px;
 						font-weight: 700;
+
 						@media (min-width: 1200px) {
 							font-size: 36px;
 						}
+
 						@media (min-width: 1440px) {
 							font-size: 40px;
 						}
 					}
+
 					.text {
 						font-size: 14px;
 						color: white;
 						padding-left: 15px;
 						position: relative;
+
 						@media (min-width: 1200px) {
 							font-size: 15px;
 							padding-left: 22px;
 						}
+
 						@media (min-width: 1440px) {
 							font-size: 16px;
 							padding-left: 30px;
 						}
+
 						&:before {
 							content: '';
 							position: absolute;
@@ -231,9 +259,11 @@
 						}
 					}
 				}
+
 				.swiper-container {
 					height: 100%;
 				}
+
 				.swiper-slide {
 					img {
 						object-fit: cover;
@@ -241,13 +271,15 @@
 						height: 100%;
 					}
 				}
+
 				&.active {
 					display: block;
 				}
 			}
-			@media (max-width: 1024.98px) {
-			}
+
+			@media (max-width: 1024.98px) {}
 		}
+
 		@media (min-width: 1025px) {
 			position: absolute;
 			top: 0;
@@ -272,9 +304,11 @@
 		@media (min-width: 1600px) {
 			padding-right: 535px;
 		}
+
 		@media (max-width: 1024.98px) {
 			display: none;
 		}
+
 		&.pull-right {
 			transform: translateX(0);
 		}
@@ -335,6 +369,16 @@
 			width: 535px;
 		}
 	}
+
+	@media (max-width: 1024.98px) {
+		.map-index-4 {
+			.container {
+				background-image: url(../assets/images/background/index-5.png);
+				background-size: cover;
+				position: center;
+			}
+		}
+	}
 }
 
 .dialog {
@@ -348,11 +392,9 @@
 		border-radius: 24px;
 		padding: 0 10px;
 		min-height: 48px;
-		background: linear-gradient(
-			306deg,
-			rgba(213, 184, 95, 1) 36%,
-			rgba(227, 227, 227, 1) 100%
-		);
+		background: linear-gradient(306deg,
+				rgba(213, 184, 95, 1) 36%,
+				rgba(227, 227, 227, 1) 100%);
 		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d5b85f", endColorstr="#e3e3e3", GradientType=1);
 
 		&:before {
@@ -418,10 +460,12 @@
 	background-color: map-get($mau, main);
 	border-radius: 6px;
 	max-height: 100%;
+
 	.content {
 		display: flex;
 		flex-wrap: wrap;
 		margin-bottom: 12px;
+
 		.text {
 			-ms-flex: 0 0 100%;
 			flex: 0 0 100%;
@@ -430,6 +474,7 @@
 			font-size: 14px;
 			text-align: justify;
 		}
+
 		.title {
 			color: #d5b85f;
 			padding-left: 10px;
@@ -438,6 +483,7 @@
 			text-transform: uppercase;
 			font-weight: 700;
 		}
+
 		.number {
 			font-size: 18px;
 			color: white;
@@ -452,6 +498,7 @@
 			background-position: center;
 		}
 	}
+
 	[data-fancybox-close] {
 		svg {
 			path {
